New Changes
Summary - walmart products displayed in a RecyclerView.