@@ -3,7 +3,9 @@ package co.uglytruth.snazzswag.walmart.adapter;
 import android.content.Context;
 import android.graphics.Color;
 import android.net.Uri;
+import android.support.annotation.NonNull;
 import android.support.v7.widget.RecyclerView;
+import android.util.Log;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
@@ -26,7 +28,7 @@ import co.uglytruth.snazzswag.walmart.views.WalmartViewHolder;
  * Created by tjw127 on 6/24/17.
  */
 
-public class WalmartAdapter {
+public class WalmartAdapter extends RecyclerView.Adapter<WalmartViewHolder>{
 
     private WalmartProducts products;
 
@@ -36,21 +38,19 @@ public class WalmartAdapter {
 
     WalmartProducts.Items[] items;
 
+    public WalmartAdapter(WalmartProducts.Items[] aItems, Context aContext){
 
-    public WTAdapter getAdapter(WalmartProducts.Items[] aItems, Context aContext)
-    {
         items = aItems;
 
         context = aContext;
 
-        WTAdapter wtAdapter = new WTAdapter();
-
-        return wtAdapter;
+        Log.d("WalmartAdapter", " " + items.length);
     }
-    public class WTAdapter extends RecyclerView.Adapter<WalmartViewHolder>{
+
+
 
         @Override
-        public WalmartViewHolder onCreateViewHolder(ViewGroup parent, int viewType) {
+        public WalmartViewHolder onCreateViewHolder(@NonNull ViewGroup parent, int viewType) {
 
             View itemView = LayoutInflater.from(parent.getContext()).inflate(R.layout.walmart_view, parent, false);
 
@@ -66,7 +66,7 @@ public class WalmartAdapter {
         }
 
         @Override
-        public void onBindViewHolder(WalmartViewHolder holder, int position) {
+        public void onBindViewHolder(@NonNull WalmartViewHolder holder, int position) {
 
             id = position;
 
@@ -75,36 +75,43 @@ public class WalmartAdapter {
             WalmartProducts.Items item = items[position];
 
 
-            WalmartItem walmartItem = new WalmartItem(item.itemId, WalmartItemIdType.WALMART_ID);
+//            WalmartItem walmartItem = new WalmartItem(item.itemId, WalmartItemIdType.WALMART_ID);
 
 
             Integer qualityInteger = null;
 
             //items.stock.equals("Available")
 
-            if (item.availableOnline == true)
+            if (item.availableOnline)
             {
-                qualityInteger = new Integer(1);
+                qualityInteger = 1;
             }else {
 
-                qualityInteger = new Integer(0);
+                qualityInteger = 0;
             }
 
             //holder.walmartBuyNowButton.se
 //            holder.walmartBuyNowButton.addItem(walmartItem, qualityInteger.intValue());
 
-            if (qualityInteger.intValue() == 0) {
+            if (qualityInteger == 0) {
 
-                holder.walmartPriceTextView.setText("$" + "0.00");
+                String zero_price = "$" + "0.00";
+
+                holder.walmartPriceTextView.setText(zero_price);
 
                 holder.walmartPriceTextView.setTextColor(Color.RED);
 
             }else {
 
-                Float itemFloat = new Float(item.salePrice);
+                String s;
+                Float itemFloat = Float.valueOf(item.salePrice);
 
-                holder.walmartPriceTextView.setText("$" + String.format("%.2f", itemFloat.floatValue()));
+                String price = "$" + String.format("%.2f", itemFloat.floatValue());
+
+                holder.walmartPriceTextView.setText(price);
             }
+
+            Log.d("WalmartImage", " " + item.largeImage);
 
             Picasso.get().load(item.largeImage).into(holder.walmartImageView);
 
@@ -121,5 +128,5 @@ public class WalmartAdapter {
             }
 
         }
-    }
+
 }
